objects/BG_Account_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BG Account Data</relationshipLabel>
        <relationshipName>BG_Account_Data</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BG_MDCP_TS__c</fullName>
        <externalId>true</externalId>
        <label>BG MDCP TS</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BG__c</fullName>
        <label>Business Area Group</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coverage_Segment__c</fullName>
        <label>Coverage Segment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focus_Account_Indicator__c</fullName>
        <label>Focus Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Account_Indicator__c</fullName>
        <label>Global Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Pricing_Account_Indicator__c</fullName>
        <label>Global Pricing Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDCP_BG_ID__c</fullName>
        <externalId>true</externalId>
        <label>MDCP BG ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MDCP_Organization_ID__c</fullName>
        <label>MDCP Organization ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <label>Named Account</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAD__c</fullName>
        <label>RAD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Segment__c</fullName>
        <label>Target Segment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Sub_Segment__c</fullName>
        <label>Target Sub-Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Top_Account_Indicator__c</fullName>
        <label>Top Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>BG Account Data</label>
    <nameField>
        <displayFormat>BG-{00000}</displayFormat>
        <label>BG Account Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BG Account Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>